# butterfly-director-ai

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: main.py
apps/api/app/config/: constants.py  logging.py  settings.py
apps/api/app/core/: deps.py  exceptions.py  pagination.py  security.py
apps/api/app/db/: base.py
apps/api/app/demo/: character_architect.py  character_memory.py  decision_detector.py  editor.py  music.py  prompt_director.py  story_architect.py  storyboard.py  timeline_generator.py  video_generation.py  voice.py
apps/api/app/graphs/: story_creation_graph.py
apps/api/app/integrations/: llm_factory.py  qwen_client.py  redis_client.py
apps/api/app/repositories/: agent_log_repository.py  asset_repository.py  base_repository.py  branch_repository.py  character_branch_state_repository.py  character_repository.py  decision_point_repository.py  job_repository.py  movie_repository.py  project_repository.py  prompt_history_repository.py  story_repository.py  timeline_repository.py  version_repository.py
apps/api/app/schemas/: agent_log.py  asset.py  branch.py  character.py  character_architect.py  character_memory.py  common.py  decision_detector.py  editor.py  job.py  movie.py  music.py  project.py  prompt_director.py  prompt_history.py  story.py  story_architect.py  storyboard.py  timeline.py  timeline_generator.py  video_generation.py  voice.py
apps/api/tests/: conftest.py  factories.py
(+219 files in other folders)
